zero-trust-k8s-platform/platform/policies/kyverno/test-priv.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-priv
  namespace: team-alpha
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: true
