zero-trust-k8s-platform/platform/policies/kyverno/disallow-latest.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest
spec:
  validationFailureAction: enforce
  rules:
    - name: disallow-latest
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Images with 'latest' tag are not allowed."
        pattern:
          spec:
            containers:
              - image: "!*latest"
