zero-trust-k8s-platform/platform/policies/kyverno/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: enforce
  rules:
    - name: require-labels
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Label 'team' is required."
        pattern:
          metadata:
            labels:
              team: "?*"
